# SDLTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  main.cpp
